add duplicate task logic