@@ -6,11 +6,9 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public void add(Task task) {
-        if (!history.contains(task)) {
-            history.add(task);
-        }
+        history.add(task);
         if (history.size() > 10) {
-            history.remove(0);
+            history.removeFirst();
         }
     }
 
